# jisrot

./: .gitignore  Cargo.toml  README.md  build.rs  jihooyoon_cert.cer  jihooyoon_signing.pfx  sign_code_mac_linux.sh  sign_code_win.ps1
sample_definitions_json/: sbm_pricing_def.json
src/: analyze_event_history.rs  analyzing.rs  app_egui.rs  data_io.rs  data_reader.rs  egui_gui.rs  file_reader.rs  main.rs  modal.rs
src/definitions/: common..rs  common.rs  default_ms_excluding_def.rs  default_ms_pricing_def.rs  mod.rs  msdef.json  sbmdef.json  strings.rs
src/modals/: data_modal.rs  mod.rs
src/models/: data_model.rs  mod.rs  ui_model.rs
ui/: main_window.slint
