[package]
name = "jisrot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
eframe = "0.33.0"
getset = "0.1.6"
regex = "1.11.2"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
