[package]
name = "jisrot"
version = "0.1.1"
edition = "2024"
build = "build.rs"
authors = ["Ji Hoo Yoon <Phan.Huy.Cong@gmail.com>"]
description = "Ji's Shopify Researching Operation Tools"
license = "GPLv2"
repository = "https://github.com/jihooyoon/jisrot"
homepage = "https://github.com/jihooyoon"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
eframe = { version = "0.33.0", features = ["persistence"] }
getset = "0.1.6"
indexmap = { version = "2.12.0", features = ["serde"] }
regex = "1.11.2"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"

[build-dependencies]
winres = "0.1"
image = "0.25.8"
ico = "0.4.0"
cargo-bundle = "0.9.0"

[package.metadata.bundle]
name = "Jisrot"
identifier = "com.jihooyoon.jisrot"
icon = ["ass/icon/icon.icns"]
